--- a/package.json
+++ b/package.json
@@ -8,27 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.21.0",
-    "register-service-worker": "^1.7.2",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.3",
-    "vuex": "^3.6.2"
+    "axios": "^0.25.0",
+    "core-js": "~3.21.0",
+    "register-service-worker": "~1.7.2",
+    "vue": "~2.6.14",
+    "vue-router": "~3.5.3",
+    "vuetify": "~2.6.3",
+    "vuex": "~3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-plugin-pwa": "^4.5.15",
-    "@vue/cli-plugin-router": "^4.5.15",
-    "@vue/cli-plugin-vuex": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.14"
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-pwa": "~4.5.15",
+    "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-vuex": "~4.5.15",
+    "@vue/cli-service": "~4.5.15",
+    "@vue/eslint-config-standard": "~5.1.2",
+    "babel-eslint": "~10.1.0",
+    "eslint": "~6.8.0",
+    "eslint-plugin-import": "~2.25.4",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-promise": "~4.3.1",
+    "eslint-plugin-standard": "~4.1.0",
+    "eslint-plugin-vue": "~6.2.2",
+    "sass": "~1.32.13",
+    "sass-loader": "~10.2.1",
+    "vue-cli-plugin-vuetify": "~2.4.5",
+    "vue-template-compiler": "~2.6.14",
+    "vuetify-loader": "~1.7.3"
   }
 }
