--- a/package.json
+++ b/package.json
@@ -1,40 +1,57 @@
 {
-  "name": "finnomena_test_frontend",
+  "name": "FINNOMENA",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "core-js": "~3.21.0",
-    "register-service-worker": "~1.7.2",
-    "vue": "~2.6.14",
-    "vue-router": "~3.5.3",
-    "vuetify": "~2.6.3",
-    "vuex": "~3.6.2"
+    "core-js": "^3.21.0",
+    "lightweight-charts": "^3.7.0",
+    "moment": "^2.29.1",
+    "register-service-worker": "^1.7.2",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.6.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-pwa": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/eslint-config-standard": "~5.1.2",
-    "babel-eslint": "~10.1.0",
-    "eslint": "~6.8.0",
-    "eslint-plugin-import": "~2.25.4",
-    "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-promise": "~4.3.1",
-    "eslint-plugin-standard": "~4.1.0",
-    "eslint-plugin-vue": "~6.2.2",
-    "sass": "~1.32.13",
-    "sass-loader": "~10.2.1",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "~2.6.14",
-    "vuetify-loader": "~1.7.3"
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-unit-jest": "^4.5.15",
+    "@vue/cli-plugin-vuex": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/test-utils": "^1.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "jest": "^27.5.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.2.1",
+    "vue-cli-plugin-vuetify": "^2.4.5",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest"
+    }
   }
 }
